--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF4940</color>
+    <color name="gray">#555554</color>
+    <color name="light_orange">#FF8740</color>
+    <color name="pressed_orange">#FFA773</color>
 </resources>
